--- a/show_ver_ios.yaml
+++ b/show_ver_ios.yaml
@@ -1,3 +1,12 @@
+[routers]
+router1 ansible_host=sandbox-iosxe-latest-1.cisco.com ansible_user=admin ansible_password=C1sco12345
+router2 ansible_host=sandbox-iosxr-1.cisco.com ansible_user=admin ansible_password=C1sco12345
+
+[routers:vars]
+ansible_connection=network_cli
+ansible_network_os=ios
+ansible_port=22
+
 ---
 - name: Show Data
   hosts: routers
